[gd_scene load_steps=2 format=3 uid="uid://chbapnujwr0bg"]

[ext_resource type="Script" uid="uid://ctaknc7t602po" path="res://webcam_client.gd" id="1"]

[node name="WebcamClient" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
text = "Webcam Streaming Client"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 60.0
offset_right = 300.0
offset_bottom = 85.0
text = "Status: Disconnected"

[node name="ServerInfo" type="Label" parent="."]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 0
offset_left = 400.0
offset_top = 60.0
offset_right = 650.0
offset_bottom = 85.0
text = "Server: 127.0.0.1:8888"

[node name="VideoContainer" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -330.0
offset_top = -250.0
offset_right = 330.0
offset_bottom = 250.0

[node name="TextureRect" type="TextureRect" parent="VideoContainer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
expand_mode = 1
stretch_mode = 5

[node name="NoSignalLabel" type="Label" parent="VideoContainer"]
modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 15.0
text = "No Signal"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlPanel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -20.0

[node name="ConnectButton" type="Button" parent="ControlPanel"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -20.0
offset_right = 170.0
offset_bottom = 20.0
text = "Connect to Server"

[node name="QuitButton" type="Button" parent="ControlPanel"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = 20.0
text = "Quit"

[node name="InfoPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 350.0
offset_bottom = 200.0

[node name="InfoTitle" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 30.0
text = "Connection Info:"

[node name="FPSLabel" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 35.0
offset_right = 290.0
offset_bottom = 55.0
text = "FPS: --"

[node name="ResolutionLabel" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 55.0
offset_right = 290.0
offset_bottom = 75.0
text = "Resolution: --"

[node name="DataRateLabel" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 75.0
offset_right = 290.0
offset_bottom = 95.0
text = "Data Rate: --"
